--- a/caledonia.opam
+++ b/caledonia.opam
@@ -24,6 +24,7 @@ depends: [
   "uuidm" {>= "0.9.9"}
   "eio" {>= "0.12"}
   "eio_main" {>= "0.12"}
-  "calendar" {>= "3.0.0"}
+  "timere" {>= "0.8.0"}
+  "timedesc" {>= "0.8.0"}
   "alcotest" {>= "1.8.0" & with-test}
 ]
