switch to Icalendar.recur_dates with recurrence_ids

--- a/test/dune
+++ b/test/dune
@@ -1,5 +1,5 @@
 (tests
- (names test_calendar_dir test_query test_recur)
+ (names test_calendar_dir test_query)
  (libraries caledonia_lib alcotest str ptime)
  (deps
   (source_tree calendar)))
