--- a/caledonia.opam
+++ b/caledonia.opam
@@ -26,6 +26,7 @@ depends: [
   "eio_main" {>= "0.12"}
   "timere" {>= "0.8.0"}
   "timedesc" {>= "0.8.0"}
+  "ppx_sexp_conv" {>= "0.15.1"}
   "alcotest" {>= "1.8.0" & with-test}
 ]
 pin-depends: [
